# automata-string-domain

./: README.md  automata_string_domain.opam  beamer.tex  dune-project  etats_avec_minimisation.txt  etats_sans_minimisation.txt  plot.py  test.dot  test0.dot  test_determinise.dot  test_minimal.dot  test_renomme.dot  test_while.dot
backups/: beamer.aux  beamer.fdb_latexmk  beamer.fls  beamer.nav  beamer.out  beamer.tex  beamer.toc  rapport.tex
lib/automates/: automates.ml  automates.mli  automates_builder.ml  automates_builder.mli  dune
lib/language/: ast.ml  dune  language.ml  language.mli
