(lang dune 3.6)

(name automata_string_domain)

(generate_opam_files true)

(source
 (github Ph03nixStyle/automata-string-domain))

(authors "Grégoire Maire")

(maintainers "Grégoire Maire")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name automata_string_domain)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune num)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
